fixing jump bug in slide transition

--- a/src/scss/_carousel.scss
+++ b/src/scss/_carousel.scss
@@ -41,7 +41,9 @@ In this file:
     }
 
     .carousel__slides {
-        display: flex; transition: transform 0.5s ease;
+        display: flex;
+        flex-direction: row;
+        transition: transform 0.5s ease-in-out; /* Smooth transition */
     }
 
     .carousel__slide {
@@ -104,7 +106,7 @@ In this file:
     }
 
     .carousel__indicator.active {
-        background-color: #333;
+        background-color: currentColor;
     }
 
 } // end @layer
